--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eridan Games - Where Shores Meet Stars</title>
+    <link rel="icon" type="image/png" href="content/images/eridan-logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <div class="logo-icon">E</div>
+            <div class="logo-icon"><img src="content/images/eridan-logo.png" alt="E"></div>
             <span>Eridan Games</span>
         </div>
         <ul class="nav-links">
