Dynamically loads carousel images from JSON
Loads carousel images from a JSON file, providing flexibility
and easier content management.

Adds fallback mechanism to load default images in case of errors.
Improves carousel initialization by dynamically populating slides and indicators.

--- a/index.html
+++ b/index.html
@@ -35,23 +35,13 @@
                 <a href="#community" class="cta-primary">Join Our Community</a>
             </div>
             <div class="hero-carousel">
-                <div class="carousel-track">
-                    <div class="carousel-slide">
-                        <img src="https://eridangames.com/Maro.png" alt="Maro Character">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://eridangames.com/Liguni.Zelen.png" alt="Liguni Zelen">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://eridangames.com/Dindra.Zemlja.png" alt="Dindra Zemlja">
-                    </div>
+                <div class="carousel-track" id="carousel-track">
+                    <!-- Carousel slides will be dynamically populated here -->
                 </div>
                 <button class="carousel-btn prev" aria-label="Previous">‹</button>
                 <button class="carousel-btn next" aria-label="Next">›</button>
-                <div class="carousel-indicators">
-                    <span class="carousel-indicator active" data-slide="0"></span>
-                    <span class="carousel-indicator" data-slide="1"></span>
-                    <span class="carousel-indicator" data-slide="2"></span>
+                <div class="carousel-indicators" id="carousel-indicators">
+                    <!-- Carousel indicators will be dynamically populated here -->
                 </div>
             </div>
         </div>
@@ -89,6 +79,9 @@
         </div>
         <a href="#" class="view-all-btn">View All Games →</a>
     </section>
+
+    <!-- Divider -->
+    <div class="section-divider"></div>
 
     <!-- Worlds -->
     <section id="worlds">
