Adds an about page for the game studio
Creates an "About Us" page with the studio's mission, values, and journey, providing users with insights into the company's history and philosophy.

Also updates the navigation links in both the home and about pages to ensure proper cross-linking.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="">Home</a></li>
             <li><a href="#games">Games</a></li>
             <li><a href="#worlds">Worlds</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         <a href="#community" class="cta-primary">Join our Discord</a>
     </nav>
@@ -135,6 +135,7 @@
                 <div class="footer-column">
                     <h4>Community</h4>
                     <a href="#">Discord</a>
+                    <a href="#">YouTube</a>
                     <a href="#">Gamefound</a>
                     <a href="#">Newsletter</a>
                 </div>
