Refactors footer and updates styling
Restructures the footer for better layout and includes a newsletter subscription form.

Updates the logo and favicon, and adds Google Fonts for improved typography.
Adjusts styling for improved visual consistency and readability.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span>Eridan Games</span>
         </div>
         <ul class="nav-links">
-            <li><a href="">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#games">Games</a></li>
             <li><a href="#worlds">Worlds</a></li>
             <li><a href="about.html">About</a></li>
@@ -125,7 +125,7 @@
                         <a href="#">Discord</a>
                         <a href="#">YouTube</a>
                         <a href="#">Gamefound</a>
-                        <a href="#">Newsletter</a>
+                        <a href="#">Twitter</a>
                     </div>
                 </div>
             </div>
@@ -134,11 +134,6 @@
         
         <div class="footer-bottom">
             <p>Eridan Games Studio. All rights reserved. 2025.</p>
-            <div class="footer-social">
-                <a href="#" aria-label="Twitter">𝕏</a>
-                <a href="#" aria-label="Discord">💬</a>
-                <a href="#" aria-label="YouTube">▶️</a>
-            </div>
         </div>
     </footer>
 
