--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
             <li><a href="index.html#games">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="#">Wiki</a></li>
         </ul>
         <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
             <span></span>
