Enhances content and styling for world pages
Adds world descriptions and gameplay pillars for a richer user experience.

Introduces a new "worlds" content type and improves styling, including adding a new features table, adjusting game card layouts, and updating section dividers for enhanced visual appeal.

The new `worlds.json` file defines the structure and content for various game worlds, enabling dynamic content generation on the world pages.

--- a/world.html
+++ b/world.html
@@ -43,16 +43,16 @@
             <p class="world-description" id="world-description">
                 Loading world information...
             </p>
-            <div class="wiki-link cta-secondary">
-                <a href="#" id="wiki-link" class="cta-tertiary">📖 Dive Deeper into the Wiki (Soon to come)</a>
+            <div class="cta-center wiki-link">
+                <a href="#" id="wiki-link" class="cta-secondary">📖 Dive Deeper into the Wiki (Soon to come)</a>
             </div>
         </div>
     </section>
 
-    <!-- World Features Cards -->
+    <!-- World Features -->
     <section class="world-features">
-        <div class="features-grid" id="features-grid">
-            <!-- Feature cards will be dynamically populated here -->
+        <div class="features-table" id="features-table">
+            <!-- Feature rows will be dynamically populated here -->
         </div>
     </section>
 
@@ -60,7 +60,6 @@
     <section class="world-games">
         <div class="section-header">
             <h2 id="world-games-title">Games in This World</h2>
-            <p id="world-games-description">Loading games information...</p>
         </div>
         
         <div class="world-games-grid" id="world-games-grid">
