--- a/worlds.html
+++ b/worlds.html
@@ -102,7 +102,7 @@
                     <h3></h3>
                 </div>
                 <p></p>
-                <div class="world-games-grid">
+                <div class="world-card-games-grid">
                     <div class="world-game-item">
                         <div class="world-game-image">
                             <img src="content/images/rika-liguni-zeleni.png" alt="Rika: The Board Game">
