Replaces features table with carousel
Improves the display of world features by replacing the static table with an interactive carousel.

This allows for a more engaging and user-friendly experience, especially on smaller screens. Adds navigation buttons and numbered indicators.

--- a/world.html
+++ b/world.html
@@ -51,8 +51,15 @@
 
     <!-- World Features -->
     <section class="world-features">
-        <div class="features-table" id="features-table">
-            <!-- Feature rows will be dynamically populated here -->
+        <div class="features-carousel">
+            <div class="carousel-indicators" id="features-indicators">
+                <!-- Numbered indicators will be dynamically populated here -->
+            </div>
+            <div class="carousel-track" id="features-track">
+                <!-- Feature slides will be dynamically populated here -->
+            </div>
+            <button class="carousel-btn prev" id="features-prev">‹</button>
+            <button class="carousel-btn next" id="features-next">›</button>
         </div>
     </section>
 
