Refactors site for game-specific pages
Implements dedicated game pages with detailed information.
Introduces a new `game-page.js` file to handle dynamic loading and population of game data from a JSON source.
Updates navigation links and game card links to point to the new game pages.
Removes the hero carousel from the home page.
Changes structure of index page and moves content to games page.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#games">Games</a></li>
+            <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">Wiki</a></li>
@@ -35,8 +35,8 @@
     </nav>
 
     <!-- About Hero -->
-    <section class="about-hero">
-        <div class="about-hero-content">
+    <section class="page-hero">
+        <div class="page-hero-content">
             <h1>About Eridan Games Studio</h1>
             <p>We create challenging gaming experiences that emphasize player's agency in worlds filled with wonder and contrastive realities.</p>
         </div>
@@ -179,7 +179,7 @@
                     <div class="footer-column">
                         <h3>Studio</h3>
                         <a href="index.html" class="cta-tertiary">Home</a>
-                        <a href="index.html#games" class="cta-tertiary">Games</a>
+                        <a href="games.html" class="cta-tertiary">Games</a>
                         <a href="worlds.html" class="cta-tertiary">Worlds</a>
                         <a href="about.html" class="cta-tertiary">About Us</a>
                     </div>
@@ -200,6 +200,7 @@
         </div>
     </footer>
 
+    <script src="starfield.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
