--- a/world.html
+++ b/world.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#games">Games</a></li>
+            <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">Wiki</a></li>
@@ -37,14 +37,18 @@
     <!-- World Hero Banner -->
     <section class="world-hero">
         <div class="world-hero-content">
-            <div class="world-banner">
-                <img id="world-banner-image" src="" alt="">
+            <div class="world-hero-left">
+                <div class="world-banner">
+                    <img id="world-banner-image" src="" alt="">
+                </div>
             </div>
-            <p class="world-description" id="world-description">
-                Loading world information...
-            </p>
-            <div class="cta-center wiki-link">
-                <a href="#" id="wiki-link" class="cta-secondary">📖 Dive Deeper into the Wiki (Soon to come)</a>
+            <div class="world-hero-right">
+                <p class="world-description" id="world-description">
+                    Loading world information...
+                </p>
+                <div class="wiki-link">
+                    <a href="#" id="wiki-link" class="cta-secondary">📖 Dive Deeper into the Wiki (Soon to come)</a>
+                </div>
             </div>
         </div>
     </section>
@@ -99,7 +103,7 @@
                     <div class="footer-column">
                         <h3>Studio</h3>
                         <a href="index.html" class="cta-tertiary">Home</a>
-                        <a href="index.html#games" class="cta-tertiary">Games</a>
+                        <a href="games.html" class="cta-tertiary">Games</a>
                         <a href="worlds.html" class="cta-tertiary">Worlds</a>
                         <a href="about.html" class="cta-tertiary">About Us</a>
                     </div>
