--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#games">Games</a></li>
+            <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">Wiki</a></li>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="cta-center">
-            <a href="#" class="cta-secondary">View All Games →</a>
+            <a href="games.html" class="cta-secondary">View All Games →</a>
         </div>
     </section>
 
@@ -117,7 +117,7 @@
                     <div class="footer-column">
                         <h3>Studio</h3>
                         <a href="index.html" class="cta-tertiary">Home</a>
-                        <a href="#games" class="cta-tertiary">Games</a>
+                        <a href="games.html" class="cta-tertiary">Games</a>
                         <a href="worlds.html" class="cta-tertiary">Worlds</a>
                         <a href="about.html" class="cta-tertiary">About Us</a>
                     </div>
