--- a/world.html
+++ b/world.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Starfield Background -->
@@ -124,8 +124,8 @@
         </div>
     </footer>
 
-    <script src="starfield.js"></script>
-    <script src="script.js"></script>
-    <script src="world-page.js"></script>
+    <script src="js/starfield.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/world-page.js"></script>
 </body>
 </html>
