Improves world card navigation on index
Makes the entire world card on the index page clickable,
navigating users to the corresponding world details page.
Removes the footer link on index, streamlining the user
experience. Also, adds spacing to the footer and styles the
world cards to enhance visual appeal and interaction.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         <div class="worlds-grid" id="worlds-grid">
             <!-- World cards will be dynamically populated here -->
         </div>
+        <div class="cta-center">
+            <a href="worlds.html" class="cta-secondary">Explore Our Worlds →</a>
+        </div>
     </section>
 
     <!-- Footer -->
@@ -160,7 +163,7 @@
 
     <!-- World Card Template -->
     <template id="world-card-template">
-        <div class="world-card">
+        <a href="#" class="world-card">
             <div class="world-card-image">
                 <img src="" alt="">
             </div>
@@ -171,10 +174,7 @@
                 </div>
                 <p></p>
             </div>
-            <div class="world-card-footer">
-                Explore the world →
-            </div>
-        </div>
+        </a>
     </template>
 
 
