--- a/games.html
+++ b/games.html
@@ -115,6 +115,7 @@
     </template>
 
     <script src="js/starfield.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/games.js"></script>
 </body>
 </html>
