--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             <div class="value-card">
                 <div class="value-icon">⚡</div>
                 <h3>Innovation</h3>
-                <p>We explore mechanical limits and bold worlds, crafting fresh frontiers for experienced players.</p>
+                <p>We explore mechanical limits and bold worlds, crafting fresh frontiers for both new and experienced players.</p>
             </div>
             <div class="value-card">
                 <div class="value-icon">👥</div>
